# krit

./: .gitmodules  CMakeLists.txt  README.md  tsconfig.json
backend/io/: IoFile.cpp  IoFileHelper.cpp  IoFileHelper.h  IoZip.cpp
backend/krit/io/: Io.h  IoFile.cpp  IoFileHelper.cpp  IoFileHelper.h  IoZip.cpp
backend/krit/platform/: Platform.h  PlatformDesktop.cpp
backend/krit/renderer/: Renderer.h  RendererGl.cpp
backend/net/: NetCurl.cpp  NetFetch.cpp
backend/platform/: PlatformDesktop.cpp  PlatformWeb.cpp
backend/renderer/: RendererGl.cpp
backend/sdl/krit/: App.cpp  Backend.cpp  Backend.h  RenderThread.cpp  RenderThread.h  TaskManager.cpp  TaskManager.h
backend/sdl/krit/asset/: ImageLoader.cpp  ImageLoader.h
backend/sdl/krit/render/: FrameBuffer.h  Gl.cpp  Gl.h  ImageData.cpp  ImageData.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
editors/particle/: CMakeLists.txt
editors/particle/src/: main.cpp
script/: .prettierrc  builtin.bridge.d.ts  builtin.d.ts  data.d.ts  data.types.d.ts  engine.d.ts  engine.types.d.ts  global.d.ts  input.d.ts  l12n.d.ts  math.d.ts  math.types.d.ts  render.d.ts  sound.d.ts  sprites.d.ts  sprites.types.d.ts  utils.d.ts  utils.types.d.ts
src/: index.d.ts
src/freetype/config/: ftoption.h
src/krit/: App.cpp  App.h  Assets.h  Backend.cpp  Backend.h  Camera.cpp  Camera.d.ts  Camera.h  CrashHandler.cpp  CrashHandler.h  Engine.cpp  Engine.d.ts  Engine.h  Math.cpp  Math.h  Options.h  RenderThread.cpp  RenderThread.h  Sprite.d.ts  Sprite.h  TaskManager.cpp  TaskManager.h  UpdateContext.cpp  UpdateContext.d.ts  UpdateContext.h  Utils.cpp  Utils.h  Window.cpp  Window.d.ts  Window.h  main.cpp
src/krit/asset/: AssetCache.cpp  AssetCache.h  AssetContext.cpp  AssetContext.h  AssetInfo.h  AssetLoader.cpp  AssetLoader.h  AssetType.h  Assets.cpp  Assets.h  BitmapFont.cpp  BitmapFont.h  Font.cpp  Font.d.ts  Font.h  ImageLoader.cpp  ImageLoader.h  ScalableFont.h  TextLoader.cpp  TextLoader.h  TextureAtlas.cpp  TextureAtlas.d.ts  TextureAtlas.h
src/krit/audio/: AudioBackend.cpp  AudioBackend.d.ts  AudioBackend.h  AudioData.cpp  AudioData.d.ts  AudioData.h  AudioSource.cpp  AudioSource.d.ts  AudioSource.h
src/krit/behavior/: BehaviorTree.h  TreeBuilder.h
src/krit/data/: DataModel.d.ts  DataModel.h
src/krit/ecs/: Builder.h  Entity.h  EventBus.h  System.h  Utils.h  World.h
src/krit/editor/: Editor.cpp  Editor.h
src/krit/input/: ControlBindings.h  FocusContext.cpp  FocusContext.h  InputContext.cpp  InputContext.d.ts  InputContext.h  InputEvent.h  Key.cpp  Key.d.ts  Key.h  Mouse.cpp  Mouse.d.ts  Mouse.h  MouseContext.cpp  MouseContext.h
src/krit/io/: FileIo.cpp  FileIo.d.ts  FileIo.h  Io.d.ts  Io.h  ZipIo.cpp  ZipIo.h
src/krit/l12n/: TextMap.cpp  TextMap.d.ts  TextMap.h
src/krit/math/: Dimensions.h  Matrix.cpp  Matrix.h  Measurement.d.ts  Measurement.h  Point.h  Random.cpp  Random.h  Range.h  Rectangle.d.ts  Rectangle.h  ScaleFactor.h  Triangle.d.ts  Triangle.h  Vec.d.ts  Vec.h
src/krit/net/: Net.cpp  Net.d.ts  Net.h
src/krit/particles/: Interpolation.cpp  Interpolation.h  Particle.cpp  Particle.h  ParticleEffect.h  ParticleProperties.h  ParticleSystem.cpp  ParticleSystem.h
src/krit/platform/: Platform.cpp  Platform.d.ts  Platform.h
src/krit/render/: BlendMode.d.ts  BlendMode.h  CommandBuffer.h  DrawCall.cpp  DrawCall.h  DrawCommand.cpp  DrawCommand.d.ts  DrawCommand.h  DrawContext.cpp  DrawContext.d.ts  DrawContext.h  DrawKey.h  FrameBuffer.cpp  FrameBuffer.d.ts  FrameBuffer.h  Gl.cpp  Gl.h  ImageData.cpp  ImageData.d.ts  ImageData.h  ImageRegion.cpp  ImageRegion.d.ts  ImageRegion.h  Material.h  RenderContext.cpp  RenderContext.d.ts  RenderContext.h  Renderer.cpp  Renderer.h  SceneShader.cpp  SceneShader.d.ts  SceneShader.h  Shader.cpp  Shader.h  SmoothingMode.d.ts  SmoothingMode.h  SpriteShader.cpp  SpriteShader.d.ts  SpriteShader.h  Uniform.h  (+8 more)
src/krit/script/: FileDb.cpp  FileDb.d.ts  FileDb.h  ObjectHeader.cpp  ObjectHeader.h  OwnedValue.h  Promise.h  ScriptAllocator.cpp  ScriptAllocator.h  ScriptBuiltins.cpp  ScriptBuiltins.d.ts  ScriptBuiltins.h  ScriptClass.h  ScriptEngine.cpp  ScriptEngine.h  ScriptFinalizer.cpp  ScriptFinalizer.h  ScriptType.h  ScriptValue.cpp  ScriptValue.h
src/krit/sound/: AudioBackend.cpp  AudioBackend.d.ts  AudioBackend.h  MusicData.cpp  MusicData.h  SoundContext.cpp  SoundContext.h  SoundData.cpp  SoundData.d.ts  SoundData.h  SoundLoader.cpp
src/krit/sprites/: Backdrop.cpp  Backdrop.d.ts  Backdrop.h  BitmapText.cpp  BitmapText.h  Button.h  Canvas.h  Emitter.cpp  Emitter.h  Image.cpp  Image.d.ts  Image.h  Layout.cpp  Layout.h  NineSlice.cpp  NineSlice.d.ts  NineSlice.h  Particles.cpp  Particles.d.ts  Particles.h  Scene.cpp  Scene.h  SpineSprite.cpp  SpineSprite.d.ts  SpineSprite.h  Text.cpp  Text.d.ts  Text.h  TextBase.h  TileMap.cpp  TileMap.h  UserSprite.h  colored_rect.kit
src/krit/state/: StateMachine.h
src/krit/utils/: Browser.d.ts  Browser.h  Color.d.ts  Color.h  File.h  Interpolation.cpp  Interpolation.h  Log.cpp  Log.d.ts  Log.h  Lru.h  MemUtils.cpp  Memory.cpp  Memory.h  Option.h  Panic.cpp  Panic.h  Parse.cpp  Parse.d.ts  Parse.h  Pool.h  Profiling.h  ScopedMutex.cpp  ScopedMutex.h  Signal.cpp  Signal.h  Slice.h  StringSlice.h  Utf8.h  Vector.h
tools/: update_assets.sh
tools/asset_registry/: AssetId.h.jinja2  Assets.cpp.jinja2  Assets.h.jinja2  asset_registry.py  assets.yaml.jinja2  images.yaml.jinja2
tools/bridge_generator/: package-lock.json  package.json
tools/bridge_generator/src/: index.js
tools/bridge_generator/templates/: ScriptBridge.cpp.nj  ScriptBridge.cpp.njk  ScriptBridge.h.nj  ScriptClass.class.cpp.nj  ScriptClass.class.cpp.njk  ScriptClass.cpp.nj  ScriptClass.h.nj  ScriptClassGenerated.cpp.njk  ScriptClassGenerated.h.njk
tools/tsbindgen/: package-lock.json  package.json  tsconfig.json
tools/tsbindgen/src/: bindgen.ts  error.ts  index.ts  template.ts  utils.ts
tools/tsbindgen/templates/: ScriptClass.cpp.njk
